<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ShoppinListActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:fitsSystemWindows="true"
            android:layout_height="@dimen/app_bar_height"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:toolbarId="@+id/toolbar"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="?attr/colorPrimary">

            <com.flaviofaria.kenburnsview.KenBurnsView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/todohead"/>

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_width="match_parent"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>

            <ImageButton
                    android:id="@+id/logout"
                    android:layout_width="77dp"
                    android:layout_height="64dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/custom_button"
                    android:src="@drawable/logout__2_"
                    android:text="Cerrar Sesion"
                    android:textColor="@color/colorWhite"
                    app:layout_anchorGravity="bottom|end"
                    tools:src="@drawable/logout__2_" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerItem"
            android:layout_width="match_parent"
            android:layout_height="595dp"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:scrollbars="vertical"
            app:layout_anchorGravity="bottom"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:backgroundTint="#202443"
            android:tint="@color/colorWhite"
            app:backgroundTint="#FFFFFF"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@drawable/icon_add" />

    <Button
            android:id="@+id/btnDeleteAll"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_margin="@dimen/fab_margin"
            android:background="@drawable/custom_button"
            android:shadowColor="#A7A7A7"
            android:text="@string/delete_all"
            android:textColor="@color/colorWhite"
            app:layout_anchor="@id/app_bar"
            android:textSize="12dp"
            app:layout_anchorGravity="bottom|start" />



    <Button
            android:id="@+id/share"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginLeft="30dp"
            android:background="@drawable/custom_button"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:shadowColor="#A7A7A7"
            android:text="@string/share"
            android:textColor="@color/colorWhite"
            android:textSize="12dp"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|center_horizontal" />

    <TextView
            android:id="@+id/tvTotalCost"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="210dp"
            android:background="@color/colorWhite"
            android:fontFamily="@font/carme"
            android:text="@string/total_cost_initial"
            android:textColor="#202443"
            android:textSize="20sp" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>